--- a/css/scss/partials/_base.scss
+++ b/css/scss/partials/_base.scss
@@ -300,8 +300,14 @@ a {
   .list-inline-item i:hover {
     color: #bd5d38;
   }
+  li.list-inline-item {
+    margin: 0.5rem 0.5rem;
+  }
 }
 
 .footer {
   background-color: rgba(184, 178, 178, 0.568);
+  span {
+    min-height: 2 rem;
+  }
 }
